--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 # RENAME FILE TO 'config.yml'
 bot:
-  token: MTMwOTIwMzkyNDk1MTEwOTcyNA.GbwqPR.NHVdW5NtcZiCZjmZ-z7poQZOq_M4EPV5D0cexc
+  token: 
   owner_ids:
     - 123456789123456789
     - 987654321987654321
